--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,9 @@ target_link_libraries(${PROJECT_NAME}
         PRIVATE glad
         PRIVATE glfw
 )
+
+# 资源文件
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_CURRENT_SOURCE_DIR}/shader $<TARGET_FILE_DIR:${PROJECT_NAME}>/shader
+)
