--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(${PROJECT_NAME} ${srcs})
 
 target_include_directories(${PROJECT_NAME}
         PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
+        PRIVATE vendor/GLM
 )
 target_link_libraries(${PROJECT_NAME}
         PRIVATE glad
