--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,48 +1,68 @@
 cmake_minimum_required(VERSION 3.15)
 
+option(USE_PROXY "Enable proxy for FetchContent for file download" ON)
+if (USE_PROXY)
+    message(STATUS "Proxy is enabled")
+    set(ENV{http_proxy} "http://127.0.0.1:7890")
+    set(ENV{https_proxy} "http://127.0.0.1:7890")
+    set(CMAKE_TLS_VERIFY OFF)
+    set(CMAKE_DOWNLOAD_AGENT "curl")
+endif ()
+
+# 平台判断并设置默认编译器 仅在未手动指定时生效
+if(NOT DEFINED CMAKE_C_COMPILER AND NOT DEFINED CMAKE_CXX_COMPILER)
+    if(APPLE)
+        message(STATUS "Detected Apple platform")
+        set(CMAKE_C_COMPILER /usr/bin/clang CACHE STRING "C compiler" FORCE)
+        set(CMAKE_CXX_COMPILER /usr/bin/clang++ CACHE STRING "C++ compiler" FORCE)
+    elseif(UNIX)
+        message(STATUS "Detected Linux platform")
+        set(CMAKE_C_COMPILER /usr/bin/gcc CACHE STRING "C compiler" FORCE)
+        set(CMAKE_CXX_COMPILER /usr/bin/g++ CACHE STRING "C++ compiler" FORCE)
+    else()
+        message(FATAL_ERROR "Unsupported platform")
+    endif()
+else()
+    message(STATUS "Using user-defined compiler: ${CMAKE_C_COMPILER}, ${CMAKE_CXX_COMPILER}")
+endif()
 # 项目信息
 project(study-opengl
         VERSION 1.0
-        LANGUAGES CXX
+        LANGUAGES C CXX
 )
 # c/cpp标准
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
+add_compile_options(-Wall -Werror)
 # 输出目录
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-
-# 向项目添加全局的预编译宏
-add_definitions(-DDEBUG)
-
-# sub directory
-add_subdirectory(vendor/GLAD)
-add_subdirectory(vendor/GLFW)
-add_subdirectory(vendor/STB)
-
+# dep
+include(${CMAKE_SOURCE_DIR}/cmake/glad.cmake)
+include(${CMAKE_SOURCE_DIR}/cmake/glfw.cmake)
+include(${CMAKE_SOURCE_DIR}/cmake/glm.cmake)
+include(${CMAKE_SOURCE_DIR}/cmake/stb.cmake)
 # 源文件
-set(source_dir "${PROJECT_SOURCE_DIR}/src")
-file(GLOB_RECURSE srcs
-        "${source_dir}/*.cpp"
-)
-
-# exe
-add_executable(${PROJECT_NAME} ${srcs})
+file(GLOB_RECURSE srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE hdrs "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
+# 添加头文件的目的仅仅是为了让IDEA识别到 新建文件的时候添加索引
+add_executable(${PROJECT_NAME} ${srcs} ${hdrs})
 
 target_include_directories(${PROJECT_NAME}
         PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
-        PRIVATE vendor/GLM
 )
 target_link_libraries(${PROJECT_NAME}
         PRIVATE glad
         PRIVATE glfw
         PRIVATE stb
+        PRIVATE glm
 )
+
+# 向项目添加全局的预编译宏
+add_definitions(-DDEBUG)
 
 # 拷贝资源文件到构建目录和运行目录
 add_custom_command(
