--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,15 @@ target_link_libraries(${PROJECT_NAME}
 # 向项目添加全局的预编译宏
 add_definitions(-DDEBUG)
 
+if (APPLE)
+    # OpenGL的API在mac上被弃用了 防止编译器warn
+    add_definitions(-DGL_SILENCE_DEPRECATION)
+elseif(UNIX)
+    target_link_libraries(${PROJECT_NAME} PRIVATE dl)
+elseif(WIN32)
+    target_link_libraries(${PROJECT_NAME} PRIVATE opengl32)
+endif()
+
 # 拷贝资源文件到构建目录和运行目录
 add_custom_command(
         TARGET ${PROJECT_NAME} PRE_BUILD
