build and run on arch linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,12 +42,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 # dep
-include(${CMAKE_SOURCE_DIR}/cmake/glad.cmake)
-include(${CMAKE_SOURCE_DIR}/cmake/glfw.cmake)
-include(${CMAKE_SOURCE_DIR}/cmake/glm.cmake)
-include(${CMAKE_SOURCE_DIR}/cmake/stb.cmake)
-include(${CMAKE_SOURCE_DIR}/cmake/imgui.cmake)
-include(${CMAKE_SOURCE_DIR}/cmake/assimp.cmake)
+set(lib_directory ${CMAKE_SOURCE_DIR}/lib)
+include(${lib_directory}/glad.cmake)
+include(${lib_directory}/glfw.cmake)
+include(${lib_directory}/glm.cmake)
+include(${lib_directory}/stb.cmake)
+include(${lib_directory}/imgui.cmake)
+include(${lib_directory}/assimp.cmake)
 # 源文件
 file(GLOB_RECURSE srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE hdrs "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
@@ -61,8 +62,8 @@ foreach(target IN LISTS my_exec_targets)
     target_link_libraries(${target}
             PRIVATE glad glfw stb glm imgui assimp)
 
-    if(UNIX)
-        target_link_libraries(${target} PRIVATE dl)
+    if(LINUX)
+        target_link_libraries(${target} PRIVATE dl GL GLU X11)
     elseif(WIN32)
         target_link_libraries(${target} PRIVATE opengl32)
     endif()
