--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,26 +13,26 @@ add_custom_target(copy_assets
         COMMENT "Copying assets to build and runtime directories"
 )
 
-add_executable(earth earth.cpp)
-target_link_libraries(earth PRIVATE study-opengl)
-add_dependencies(earth copy_assets)
+add_executable(earth_test earth_test.cpp)
+target_link_libraries(earth_test PRIVATE study-opengl)
+add_dependencies(earth_test copy_assets)
 
-add_executable(box box.cpp)
-target_link_libraries(box PRIVATE study-opengl)
-add_dependencies(box copy_assets)
+add_executable(box_test box_test.cpp)
+target_link_libraries(box_test PRIVATE study-opengl)
+add_dependencies(box_test copy_assets)
 
-add_executable(point_light point_light.cpp)
-target_link_libraries(point_light PRIVATE study-opengl)
-add_dependencies(point_light copy_assets)
+add_executable(point_light_test point_light_test.cpp)
+target_link_libraries(point_light_test PRIVATE study-opengl)
+add_dependencies(point_light_test copy_assets)
 
-add_executable(spot_light spot_light.cpp)
-target_link_libraries(spot_light PRIVATE study-opengl)
-add_dependencies(spot_light copy_assets)
+add_executable(spot_light_test spot_light_test.cpp)
+target_link_libraries(spot_light_test PRIVATE study-opengl)
+add_dependencies(spot_light_test copy_assets)
 
-add_executable(scene scene.cpp)
-target_link_libraries(scene PRIVATE study-opengl)
-add_dependencies(scene copy_assets)
+add_executable(scene_test scene_test.cpp)
+target_link_libraries(scene_test PRIVATE study-opengl)
+add_dependencies(scene_test copy_assets)
 
-add_executable(model model.cpp)
-target_link_libraries(model PRIVATE study-opengl)
-add_dependencies(model copy_assets)
+add_executable(model_test model_test.cpp)
+target_link_libraries(model_test PRIVATE study-opengl)
+add_dependencies(model_test copy_assets)
