跨平台动态编译shader的OpenGL版本

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,21 +15,24 @@ project(study-opengl
         LANGUAGES C CXX
 )
 # 平台判断并设置默认编译器 仅在未手动指定时生效
-if(NOT DEFINED CMAKE_C_COMPILER AND NOT DEFINED CMAKE_CXX_COMPILER)
+if (NOT DEFINED CMAKE_C_COMPILER AND NOT DEFINED CMAKE_CXX_COMPILER)
     message(STATUS "No platform default compiler, start user-defined compiler")
-    if(APPLE)
+    if (APPLE)
         message(STATUS "Detected Apple platform")
         set(CMAKE_C_COMPILER /usr/bin/clang CACHE STRING "C compiler" FORCE)
         set(CMAKE_CXX_COMPILER /usr/bin/clang++ CACHE STRING "C++ compiler" FORCE)
-    elseif(UNIX)
+    elseif (UNIX)
         message(STATUS "Detected Linux platform")
         set(CMAKE_C_COMPILER /usr/bin/gcc CACHE STRING "C compiler" FORCE)
         set(CMAKE_CXX_COMPILER /usr/bin/g++ CACHE STRING "C++ compiler" FORCE)
-    else()
+    else ()
         message(FATAL_ERROR "Unsupported platform")
-    endif()
-endif()
+    endif ()
+endif ()
 message(STATUS "Using compiler: ${CMAKE_C_COMPILER}, ${CMAKE_CXX_COMPILER}")
+
+# 输出详细日志
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # c/cpp标准
 set(CMAKE_C_STANDARD 11)
@@ -56,7 +59,14 @@ file(GLOB_RECURSE SRCS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE HDRS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
 add_library(${PROJECT_NAME} ${SRCS})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(${PROJECT_NAME} PUBLIC glad glfw stb glm imgui assimp)
+target_link_libraries(${PROJECT_NAME}
+        PUBLIC glad
+        PUBLIC glfw
+        PUBLIC stb
+        PUBLIC glm
+        PUBLIC imgui
+        PUBLIC assimp
+)
 
 # 拷贝资源文件到构建目录和运行目录
 add_custom_target(copy_shader
@@ -67,6 +77,15 @@ add_custom_target(copy_shader
 
 # 构建时触发资源文件复制
 add_dependencies(${PROJECT_NAME} copy_shader)
+
+# 为平台设置宏 传递给shader编译用 区分对opengl版本的依赖
+if (APPLE)
+    message(STATUS "当前是Mac")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_MAC)
+elseif (UNIX)
+    message(STATUS "当前是Linux")
+    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_LINUX)
+endif ()
 
 # Enable CTest
 include(CTest)
