--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,5 @@
-# 向项目添加全局的预编译宏
-add_definitions(-DDEBUG)
-
-if (APPLE)
-    # OpenGL的API在mac上被弃用了 防止编译器warn
-    add_definitions(-DGL_SILENCE_DEPRECATION)
-endif ()
-
 # 拷贝资源文件到构建目录和运行目录
-add_custom_target(copy_assets
+add_custom_target(test_copy_assets
         COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/asset" "${CMAKE_CURRENT_BINARY_DIR}/asset"
         COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/asset" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/asset"
         COMMENT "Copying assets to build and runtime directories"
@@ -16,19 +8,19 @@ add_custom_target(copy_assets
 # Collect all cpp files in this directory
 file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "*.cpp")
 
-foreach (test_src ${TEST_SOURCES})
+foreach (TEST_SRC ${TEST_SOURCES})
     # Extract file name without extension
-    get_filename_component(test_name ${test_src} NAME_WE)
+    get_filename_component(TEST_NAME ${TEST_SRC} NAME_WE)
     # Create executable
-    add_executable(${test_name} ${test_src})
+    add_executable(${TEST_NAME} ${TEST_SRC})
     # Link main library
-    target_link_libraries(${test_name}
-            PRIVATE ${PROJECT_NAME}
+    target_link_libraries(${TEST_NAME}
+            PRIVATE ${LIB_NAME}
     )
     # 构建时触发资源文件复制
-    add_dependencies(${test_name} copy_assets)
+    add_dependencies(${TEST_NAME} test_copy_assets)
     # Register with CTest
-    add_test(NAME ${test_name}
-            COMMAND ${test_name}
+    add_test(NAME ${TEST_NAME}
+            COMMAND ${TEST_NAME}
     )
 endforeach ()
