--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 
-option(USE_PROXY "Enable proxy for FetchContent for file download" ON)
-if (USE_PROXY)
-    message(STATUS "Proxy is enabled")
-    set(ENV{http_proxy} "http://127.0.0.1:7890")
-    set(ENV{https_proxy} "http://127.0.0.1:7890")
-    set(CMAKE_TLS_VERIFY OFF)
-    set(CMAKE_DOWNLOAD_AGENT "curl")
-endif ()
-
 # 项目信息
 project(study-opengl
         VERSION 1.0
         LANGUAGES C CXX
 )
-# 平台判断并设置默认编译器 仅在未手动指定时生效
-if (NOT DEFINED CMAKE_C_COMPILER AND NOT DEFINED CMAKE_CXX_COMPILER)
-    message(STATUS "No platform default compiler, start user-defined compiler")
-    if (APPLE)
-        message(STATUS "Detected Apple platform")
-        set(CMAKE_C_COMPILER /usr/bin/clang CACHE STRING "C compiler" FORCE)
-        set(CMAKE_CXX_COMPILER /usr/bin/clang++ CACHE STRING "C++ compiler" FORCE)
-    elseif (UNIX)
-        message(STATUS "Detected Linux platform")
-        set(CMAKE_C_COMPILER /usr/bin/gcc CACHE STRING "C compiler" FORCE)
-        set(CMAKE_CXX_COMPILER /usr/bin/g++ CACHE STRING "C++ compiler" FORCE)
-    else ()
-        message(FATAL_ERROR "Unsupported platform")
-    endif ()
-endif ()
-message(STATUS "Using compiler: ${CMAKE_C_COMPILER}, ${CMAKE_CXX_COMPILER}")
 
 # 输出详细日志
 set(CMAKE_VERBOSE_MAKEFILE ON)
@@ -44,8 +19,9 @@ add_compile_options(-Wall -Werror)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+
 # dep
-set(lib_directory ${CMAKE_SOURCE_DIR}/lib)
+set(lib_directory ${CMAKE_SOURCE_DIR}/cmake)
 include(${lib_directory}/OpenGL.cmake)
 include(${lib_directory}/glad.cmake)
 include(${lib_directory}/glfw.cmake)
@@ -54,38 +30,8 @@ include(${lib_directory}/stb.cmake)
 include(${lib_directory}/imgui.cmake)
 include(${lib_directory}/assimp.cmake)
 
-# 源文件
-file(GLOB_RECURSE SRCS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
-file(GLOB_RECURSE HDRS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
-add_library(${PROJECT_NAME} ${SRCS})
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(${PROJECT_NAME}
-        PUBLIC glad
-        PUBLIC glfw
-        PUBLIC stb
-        PUBLIC glm
-        PUBLIC imgui
-        PUBLIC assimp
-)
-
-# 拷贝资源文件到构建目录和运行目录
-add_custom_target(copy_shader
-        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/asset" "${CMAKE_CURRENT_BINARY_DIR}/asset"
-        COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/asset" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/asset"
-        COMMENT "Copying shaders to build and runtime directories"
-)
-
-# 构建时触发资源文件复制
-add_dependencies(${PROJECT_NAME} copy_shader)
-
-# 为平台设置宏 传递给shader编译用 区分对opengl版本的依赖
-if (APPLE)
-    message(STATUS "当前是Mac")
-    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_MAC)
-elseif (UNIX)
-    message(STATUS "当前是Linux")
-    target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_LINUX)
-endif ()
+set(LIB_NAME ${PROJECT_NAME}-core)
+add_subdirectory(src)
 
 # Enable CTest
 include(CTest)
